Always show the scroll bar to prevent layout flickering

--- a/src/pages/_app.scss
+++ b/src/pages/_app.scss
@@ -2,10 +2,11 @@
 
 body {
   max-width: 100%;
-  overflow-x: hidden;
-  font-family: "Josefin Sans", sans-serif;
-  margin: 0;
   min-height: 100vh;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  margin: 0;
+  font-family: "Josefin Sans", sans-serif;
   color: white;
 }
 
